@@ -17,7 +17,9 @@ import uk.gov.hmcts.ccd.sdk.type.AddressUK;
 import uk.gov.hmcts.reform.docassembly.domain.OutputType;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PartyAccessCodeEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
+import uk.gov.hmcts.reform.pcs.ccd.entity.party.PartyEntity;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PartyAccessCodeRepository;
+import uk.gov.hmcts.reform.pcs.ccd.repository.PartyRepository;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PcsCaseRepository;
 import uk.gov.hmcts.reform.pcs.ccd.service.AccessCodeGenerationService;
 import uk.gov.hmcts.reform.pcs.ccd.service.PcsCaseService;
@@ -33,6 +35,7 @@ import java.net.URI;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -41,6 +44,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -61,6 +65,8 @@ class TestingSupportControllerTest {
     @Mock
     private PcsCaseRepository pcsCaseRepository;
     @Mock
+    private PartyRepository partyRepository;
+    @Mock
     private PartyAccessCodeRepository partyAccessCodeRepository;
     @Mock
     private PcsCaseService pcsCaseService;
@@ -74,7 +80,8 @@ class TestingSupportControllerTest {
     void setUp() {
         underTest = new TestingSupportController(schedulerClient, helloWorldTask,
                                                  docAssemblyService, eligibilityService,
-                                                 pcsCaseRepository, partyAccessCodeRepository, pcsCaseService,
+                                                 pcsCaseRepository, partyRepository,
+                                                 partyAccessCodeRepository, pcsCaseService,
                                                  accessCodeGenerationService
         );
     }
@@ -673,7 +680,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldCreateTestCaseSuccessfully() {
         // Given
-        Long caseReference = 1234567890123456L;
+        long caseReference = 1234567890123456L;
         final UUID caseId = UUID.randomUUID();
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("123 Test Street")
@@ -681,34 +688,39 @@ class TestingSupportControllerTest {
             .postCode("SW1A 1AA")
             .build();
         LegislativeCountry legislativeCountry = LegislativeCountry.ENGLAND;
-        UUID partyId1 = UUID.randomUUID();
-        UUID partyId2 = UUID.randomUUID();
-        UUID idamUserId1 = UUID.randomUUID();
-        UUID idamUserId2 = UUID.randomUUID();
+
+        final UUID partyId1 = UUID.randomUUID();
+        final UUID partyId2 = UUID.randomUUID();
+        final UUID idamUserId1 = UUID.randomUUID();
+        final UUID idamUserId2 = UUID.randomUUID();
 
         CreateTestCaseRequest request = new CreateTestCaseRequest();
         request.setCaseReference(caseReference);
         request.setPropertyAddress(propertyAddress);
         request.setLegislativeCountry(legislativeCountry);
 
-        List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            partyId1, idamUserId1, "John", "Doe"
+            idamUserId1, "John", "Doe"
         );
         CreateTestCaseRequest.DefendantRequest defendant2 = new CreateTestCaseRequest.DefendantRequest(
-            partyId2, idamUserId2, "Jane", "Smith"
+            idamUserId2, "Jane", "Smith"
         );
-        defendants.add(defendant1);
-        defendants.add(defendant2);
-        request.setDefendants(defendants);
+        request.setDefendants(List.of(defendant1, defendant2));
 
         PcsCaseEntity caseEntity = PcsCaseEntity.builder()
             .id(caseId)
             .caseReference(caseReference)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(caseReference, propertyAddress, legislativeCountry))
+            .thenReturn(caseEntity);
+
+        Map<UUID, UUID> idamIdToPartyIdMap = Map.of(
+            idamUserId1, partyId1,
+            idamUserId2, partyId2
+        );
+
+        stubPartyEntityFlush(idamIdToPartyIdMap);
 
         List<PartyAccessCodeEntity> accessCodes = new ArrayList<>();
         PartyAccessCodeEntity accessCode1 = PartyAccessCodeEntity.builder()
@@ -742,7 +754,6 @@ class TestingSupportControllerTest {
         assertThat(response.getBody().getDefendants().get(1).getAccessCode()).isEqualTo("XYZ789");
 
         verify(pcsCaseService).createCase(caseReference, propertyAddress, legislativeCountry);
-        verify(pcsCaseRepository).findByCaseReference(caseReference);
         verify(pcsCaseRepository).save(caseEntity);
         verify(accessCodeGenerationService).createAccessCodesForParties(String.valueOf(caseReference));
     }
@@ -765,7 +776,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            null, UUID.randomUUID(), "Bob", "Johnson" // partyId will be auto-generated
+            UUID.randomUUID(), "Bob", "Johnson" // partyId will be auto-generated
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -775,8 +786,10 @@ class TestingSupportControllerTest {
             .caseReference(1234567890123456L)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(anyLong()))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(anyLong(), eq(propertyAddress), eq(legislativeCountry)))
+            .thenReturn(caseEntity);
+
+        stubPartyEntityFlush();
 
         when(partyAccessCodeRepository.findAllByPcsCase_Id(caseId))
             .thenReturn(new ArrayList<>());
@@ -791,8 +804,8 @@ class TestingSupportControllerTest {
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getCaseId()).isEqualTo(caseId);
         assertThat(response.getBody().getDefendants()).hasSize(1);
-        assertThat(response.getBody().getDefendants().get(0).getPartyId()).isNotNull();
-        assertThat(response.getBody().getDefendants().get(0).getFirstName()).isEqualTo("Bob");
+        assertThat(response.getBody().getDefendants().getFirst().getPartyId()).isNotNull();
+        assertThat(response.getBody().getDefendants().getFirst().getFirstName()).isEqualTo("Bob");
 
         verify(pcsCaseService).createCase(anyLong(), eq(propertyAddress), eq(legislativeCountry));
     }
@@ -800,7 +813,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldCreateTestCaseWithAutoGeneratedPartyIds() {
         // Given
-        Long caseReference = 9876543210987654L;
+        long caseReference = 9876543210987654L;
         final UUID caseId = UUID.randomUUID();
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("789 Test Road")
@@ -816,7 +829,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            null, null, "Alice", "Williams" // partyId and idamUserId will be auto-generated
+            null, "Alice", "Williams" // partyId and idamUserId will be auto-generated
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -826,8 +839,10 @@ class TestingSupportControllerTest {
             .caseReference(caseReference)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(caseReference, propertyAddress, legislativeCountry))
+            .thenReturn(caseEntity);
+
+        stubPartyEntityFlush();
 
         when(partyAccessCodeRepository.findAllByPcsCase_Id(caseId))
             .thenReturn(new ArrayList<>());
@@ -848,7 +863,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleAccessCodeGenerationFailure() {
         // Given
-        Long caseReference = 1111111111111111L;
+        long caseReference = 1111111111111111L;
         final UUID caseId = UUID.randomUUID();
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("999 Test Lane")
@@ -864,7 +879,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            UUID.randomUUID(), UUID.randomUUID(), "Test", "User"
+            UUID.randomUUID(), "Test", "User"
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -874,8 +889,8 @@ class TestingSupportControllerTest {
             .caseReference(caseReference)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(caseReference, propertyAddress, legislativeCountry))
+            .thenReturn(caseEntity);
 
         doThrow(new RuntimeException("Access code generation failed"))
             .when(accessCodeGenerationService).createAccessCodesForParties(anyString());
@@ -895,7 +910,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleCaseCreationFailure() {
         // Given
-        Long caseReference = 2222222222222222L;
+        long caseReference = 2222222222222222L;
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("111 Test Drive")
             .postTown("Liverpool")
@@ -910,7 +925,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            UUID.randomUUID(), UUID.randomUUID(), "Error", "Test"
+            UUID.randomUUID(), "Error", "Test"
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -946,13 +961,10 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            UUID.randomUUID(), UUID.randomUUID(), "NotFound", "Test"
+            UUID.randomUUID(), "NotFound", "Test"
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
-
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.empty());
 
         // When
         ResponseEntity<CreateTestCaseResponse> response = underTest.createTestCase(
@@ -1124,5 +1136,32 @@ class TestingSupportControllerTest {
         } catch (Exception e) {
             throw new RuntimeException("Failed to create JsonNode", e);
         }
+    }
+
+    /**
+     * Stub the assigning of entity IDs on the repo flush, as would be done by the DB.
+     */
+    private void stubPartyEntityFlush() {
+        stubPartyEntityFlush(Map.of());
+    }
+
+    /**
+     * Stub the assigning of entity IDs on the repo flus, with the option to specify
+     * what party IDs should be assigned based on the IDAM ID, otherwise a random UUID
+     * will be assigned.
+     * @param idamIdToPartyIdMap Map from IDAM ID to Party ID to assign
+     */
+    private void stubPartyEntityFlush(Map<UUID, UUID> idamIdToPartyIdMap) {
+        doAnswer(invocationOnMock -> {
+            List<PartyEntity> parties = invocationOnMock.getArgument(0);
+            parties.forEach(party -> {
+                if (party.getIdamId() != null) {
+                    party.setId(idamIdToPartyIdMap.getOrDefault(party.getIdamId(), UUID.randomUUID()));
+                } else {
+                    party.setId(UUID.randomUUID());
+                }
+            });
+            return null;
+        }).when(partyRepository).saveAllAndFlush(any());
     }
 }
